--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -12,3 +12,10 @@ intro:
   aka: Aussi connu sous le nom de
   whats-your-name: Comment t'appelles-tu ?
 not-found: Page non trouvée
+sidebar:
+  dashboard: Tableau de bord
+  components: Composants
+  team: Équipe
+  projects: Projets
+  calendar: Calendrier
+  reports: Rapports
