--- a/locales/en.yml
+++ b/locales/en.yml
@@ -51,3 +51,31 @@ sidebar:
   projects: Projects
   reports: Reports
   team: Team
+features:
+  name: Features
+  using-the-new-tools:
+    title: Using the new tools
+    description: Using the new versions and new tools like Vue 3, Vite 2, pnpm, ESBuild
+  file-based-routing:
+    title: File based routing
+    description: Using the vite-plugin-pages plugin to create file based routing
+  components-auto-importing:
+    title: Components auto importing
+    description: Using the unplugin-vue-components plugin to auto import components
+  state-management-via-pinia:
+    title: State Management via Pinia
+    description: Manage your state with the new tool Pinia
+  layout-system:
+    title: Layout system
+    description: vite-plugin-vue-layouts plugin helps you to create layouts
+  use-icons-from-carbon-icons:
+    title: Use icons from carbon-icons
+    description: Using the unplugin-icons plugin to use icons from carbon-icons
+  i18n-ready:
+    title: I18n ready
+    description: vue-i18n plugin is used to support i18n based on YAML files
+  other-tools:
+    title: Other tools
+    description: ... and many more tools such as TypeScript, Prettier, ESLint, etc.
+  
+      
