--- a/locales/ar.yml
+++ b/locales/ar.yml
@@ -57,23 +57,23 @@ features:
     title: استخدام الأدوات الجديدة
     description: استخدام الإصدارات الجديدة والأدوات الجديدة مثل Vue 3 و Vite 2 و pnpm و ESBuild
   file-based-routing:
-    title: توجيه قائمة الملفات
-    description: استخدام مكون إضافي vite-plugin-pages لإنشاء توجيه قائمة الملفات
+    title: توجيه مستند على قائمة الملفات
+    description: استخدام ملحق vite-plugin-pages لإنشاء توجيه مستند على قائمة الملفات
   components-auto-importing:
-    title: تلقائي استيراد المكونات
-    description: استخدام مكون إضافي unplugin-vue-components لتلقائي استيراد المكونات
+    title: استيراد تلقائي للمكونات
+    description: استخدام ملحق unplugin-vue-components للاستيراد التلقائي للمكونات
   state-management-via-pinia:
     title: إدارة الحالة باستخدام Pinia
     description: إدارة الحالة الخاصة بك باستخدام الأداة الجديدة Pinia
   layout-system:
-    title: نظام التخطيط
-    description: يساعدك مكون إضافي vite-plugin-vue-layouts على إنشاء تخطيطات
+    title: نظام تنسيق الصفحات
+    description: يساعدك ملحق vite-plugin-vue-layouts  على إنشاء تخطيطات لصفحاتك
   use-icons-from-carbon-icons:
-    title: استخدام الرموز من رموز الكربون
-    description: استخدام مكون إضافي unplugin-icons لاستخدام الرموز من رموز الكربون
+    title: استخدام أيقونات مكتبة كربون
+    description: استخدام ملحق unplugin-icons لاستخدام أيقونات مكتبة كربون
   i18n-ready:
-    title: جاهز للدعم الدولي
-    description: يتم استخدام مكون إضافي vue-i18n لدعم الدعم الدولي بناءً على ملفات YAML
+    title: جاهز للدعم مختلف لغات العالم
+    description: يستخدم ملحق vue-i18n لدعم اللغات بناءً على ملفات YAML
   other-tools:
     title: أدوات أخرى
     description: ... والعديد من الأدوات الأخرى مثل TypeScript و Prettier و ESLint ، وما إلى ذلك
